# ruby-mem-watcher-demo

./: Cargo.toml  README.md  alloccount.py  out
bcc-friendly/: Cargo.toml
bcc-friendly/src/: bpf_rust.rs  bpf_symbol.rs  core.rs  lib.rs  symbol.rs  table.rs  types.rs
src/: bpf_rust.rs  bpf_symbol.rs  lib.rs  main.rs
